# lz4-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yaml
lz4-sys/: Cargo.toml  build.rs
lz4-sys/src/: lib.rs
src/: decoder.rs  encoder.rs  lib.rs
src/async/: decoder.rs
tests/: async.rs
