[package]
name = "lz4"
license = "MIT"
version = "1.23.2"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>", "Patrick Marks <pmarks@gmail.com>"]
description = "Rust LZ4 bindings library."
repository = "https://github.com/10xGenomics/lz4-rs"
documentation = "https://docs.rs/lz4"
edition = "2018"

[[bin]]
name = "lz4"
test = false
doc = false

[dependencies]
libc = "0.2"
lz4-sys = { path = "lz4-sys", version = "1.9.2" }
tokio = { version = "0.2.22", features = ["full"], optional = true }
futures = { version = "0.3.5", optional = true }

[dev-dependencies]
rand = "0.7"
docmatic = "0.1"

[features]
async = ["tokio", "futures"]
